[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scene/Player.gd" type="Script" id=1]
[ext_resource path="res://Assest/SpriteFrames/Player.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Scene/weapon/gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/function_manager.gd" type="Script" id=4]
[ext_resource path="res://Assest/Cubes/arrow.png" type="Texture" id=5]
[ext_resource path="res://Scene/weapon/hand.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "float_arrow"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.9, 0.9 )
frames = ExtResource( 2 )
animation = "redmonster"

[node name="body" type="AnimatedSprite" parent="."]
position = Vector2( 0, -13 )
frames = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="hand" type="Sprite" parent="."]
script = ExtResource( 6 )
weapon = ExtResource( 3 )

[node name="Wall" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
shape = SubResource( 9 )

[node name="jump_cooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="function_manager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="dash_effect" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float_arrow"
anims/RESET = SubResource( 12 )
anims/float_arrow = SubResource( 13 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Wall" to="." method="_on_Wall_body_entered"]
[connection signal="body_exited" from="Wall" to="." method="_on_Wall_body_exited"]
[connection signal="timeout" from="jump_cooldown" to="." method="_on_jump_cooldown_timeout"]
[connection signal="timeout" from="dash_effect" to="function_manager" method="_on_dash_effect_timeout"]
